# Next

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: lib.rs  main.rs
src/commands/: misc.rs  mod.rs  music.rs  utils.rs
src/services/: logger.rs  mod.rs
src/state/: mod.rs
