[package]
name = "codify-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/kangalioo/poise.git" }
anyhow = "1.0.55"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] } 
dotenv = "0.15.0"
